--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@rollup/plugin-url": "^6.0.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "node-sass": "^6.0.0",
+    "normalize.css": "^8.0.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-vue": "^6",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1",
     "vite": "^2.3.0"
   }
 }
