--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "three": "^0.122.0",
+    "three-mesh-bvh": "^0.2.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-url": "^6.0.0",
+    "@rollup/plugin-virtual": "^2.0.3",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
     "rollup-plugin-copy": "^3.4.0",
