--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "three": "^0.122.0",
     "three-mesh-bvh": "^0.2.0",
-    "vue": "^3.0.5",
-    "vuex": "^4.0.1"
+    "vue": "^3.0.5"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
