--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "npm run buildDev && vite preview"
   },
   "dependencies": {
+    "reveal.js": "file:../../presentations/reveal.js",
     "three": "^0.122.0",
     "three-mesh-bvh": "^0.2.0",
     "vue": "^3.0.5"
@@ -19,9 +20,10 @@
     "@rollup/plugin-virtual": "^2.0.3",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "postcss-import": "^14.0.2",
+    "postcss-url": "^10.1.3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
