--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "serve": "npm run buildDev && vite preview"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.3.1",
+    "@popmotion/easing": "^1.0.2",
+    "ethereal": "^2.0.1",
+    "fast-sha256": "^1.3.0",
+    "fast-text-encoding": "^1.0.3",
+    "lru_map": "^0.4.1",
+    "mathjs": "^9.4.2",
+    "resize-observer-polyfill": "^1.5.1",
     "reveal.js": "^4",
     "three": "^0.122.0",
     "three-mesh-bvh": "^0.2.0",
