--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-typescript": "^8.2.3",
     "@rollup/plugin-url": "^6.0.0",
     "@rollup/plugin-virtual": "^2.0.3",
+    "@types/aframe": "^1.0.5",
+    "@types/three": "^0.130.1",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
     "postcss-import": "^14.0.2",
@@ -36,6 +39,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
+    "typescript": "^4.3.5",
     "vite": "^2.3.0"
   }
 }
