--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && rollup -c rollup.config.js --environment BUILD:production",
-    "buildDev": "vite build && rollup -c rollup.config.js --environment BUILD:dev",
-    "serve": "npm run buildDev && vite preview"
+    "build": "npm run buildV && npm run buildR",
+    "buildV": "vite build",
+    "buildR": "rollup -c rollup.config.js --environment BUILD:production",
+    "buildDev": "npm run buildDevV && npm run buildDevR",
+    "buildDevV": "vite build",
+    "buildDevR": "rollup -c rollup.config.js --environment BUILD:dev",
+    "serveV": "vite preview",
+    "serve": "npm run buildDev && npm run serveV"
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
@@ -39,7 +44,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "typescript": "^4.3.5",
+    "typescript": "^4.5.0-dev.20210922",
     "vite": "^2.3.0"
   }
 }
