--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "reveal.js": "^4",
     "three": "^0.130.0",
     "vue": "^3.0.5",
-    "mathjs": "^9.4.2"
+    "mathjs": "^9.4.2",
+    "fast-text-encoding": "latest"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
